--- a/style.css
+++ b/style.css
@@ -22,9 +22,7 @@ version 1.1
     1. Global CSS
 ====================================== */
 body
-{
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
+{font-family: 'Inter', sans-serif;font-size: 16px;
     line-height: 28px;
     font-weight: 400;
     color: #444;
@@ -1006,9 +1004,7 @@ body a:hover
 }
 
 .single.single-portfolio h1
-{
-    font-family: 'Lato', sans-serif;
-    font-weight: 700;
+{font-family: 'Inter', sans-serif;font-weight: 700;
     font-size: 20px;
     line-height: 35px;
     text-align: left;
@@ -1214,9 +1210,7 @@ body a:hover
 }
 
 .nav-links .cat-links a 
-{
-    font-family: 'Lato', sans-serif;
-    font-size: 11px;
+{font-family: 'Inter', sans-serif;font-size: 11px;
     line-height: 22px;
     letter-spacing: 5px;
     text-transform: uppercase;
@@ -1272,9 +1266,7 @@ body a:hover
     border: 0;
     border-bottom: 1px solid;
     padding-bottom: 5px;
-    font-size: 16px;
-    font-family: 'Lato', sans-serif;
-    width: 100%;
+    font-size: 16px;font-family: 'Inter', sans-serif;width: 100%;
     line-height: 25px;
     color: #151d22;
     font-weight: 400;
@@ -1289,18 +1281,14 @@ body a:hover
 }
 
 .contact-form input[type=text]::-webkit-input-placeholder, .contact-form input[type=email]::-webkit-input-placeholder, .contact-form textarea::-webkit-input-placeholder
-{
-    font-family: 'Lato', sans-serif;
-    color: #151d22;
+{font-family: 'Inter', sans-serif;color: #151d22;
     font-weight: 400;
     font-size: 16px;
     line-height: 25px;
 	
 }
 .contact-form input[type=text]::-moz-placeholder, .contact-form input[type=email]::-moz-placeholder, .contact-form textarea::-moz-placeholder
-{
-    font-family: 'Lato', sans-serif;
-    color: #151d22;
+{font-family: 'Inter', sans-serif;color: #151d22;
     font-weight: 400;
     font-size: 16px;
     line-height: 25px;
@@ -1308,18 +1296,14 @@ body a:hover
 	
 }
 .contact-form input[type=text]:-ms-input-placeholder, .contact-form input[type=email]:-ms-input-placeholder, .contact-form textarea:-ms-input-placeholder
-{
-    font-family: 'Lato', sans-serif;
-    color: #151d22;
+{font-family: 'Inter', sans-serif;color: #151d22;
     font-weight: 400;
     font-size: 16px;
     line-height: 25px;
 	
 }
 .contact-form input[type=text]:-moz-placeholder, .contact-form input[type=email]:-moz-placeholder, .contact-form textarea:-moz-placeholder
-{
-    font-family: 'Lato', sans-serif;
-    color: #151d22;
+{font-family: 'Inter', sans-serif;color: #151d22;
     font-weight: 400;
     font-size: 16px;
     line-height: 25px;
@@ -1355,9 +1339,7 @@ body a:hover
     margin-bottom: 25px;
     vertical-align: middle;
     text-decoration: none;
-    background: transparent;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
+    background: transparent;font-family: 'Inter', sans-serif;font-weight: 400;
     font-size: 11px;
     transition: color .3s ease, background-color .3s ease;
     text-transform: uppercase;
