--- a/style.css
+++ b/style.css
@@ -807,10 +807,11 @@ body a:hover
 .team-holder .member-name
 {
     margin-top: 45%;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     font-weight: 300;
 	font-family: 'Playfair Display', serif;
-	font-size: 24pt ;
+	font-size: 28pt ;
+	line-height: 34px;
 	color: #151D22;
 }
 
@@ -1498,7 +1499,7 @@ li.social-footer a:first-child
         position: relative;
         min-height: 180px;
         padding: 30px 0;
-        margin-bottom: 30px;
+        margin-bottom: 0px;
     }
 
     .team-holder .member-name
